Fixed bug #42692 (Procedure 'int1' not present with doc/lit SoapServer)